import from mozilla upstream: - Merging in version bumps NO BUG CLOSED TREE ba=release (1759ba52b1d) - Merging in branding changes NO BUG CLOSED TREE ba=release (f1123b2d37e) - Bug 963000 - Explore By Touch sometimes not working when Firefox is opened and automatically loads a web page. r=kats, a=sledru (06170b30592) - Bug 968108 - Enable Metro for Beta and Release [r=bhearsum a=lsblakk] (ad3b604b95d) - b=966636 rename resampling copy variables consistently and test remaining input better r=padenot a=abillings (ec3704693fc) - Bug 941873. Blocked AudioNodeStreams should not run processing. r=karl a=lsblakk (31d1ab1c7fe) - Bug 958916: Update to NSS 3.15.5 release candidate 0 (NSS_3_15_5_RC0), r=me, a=sledru (d4a5f77afe3) - Bug 923304, Part 1: Add test for OCSP response signed by CA that has an OCSP URI, r=keeler, r=briansmith, a=test-only (ff3c99cf793) - Bug 923304, Part 2: Adjust EV tests, r=keeler, a=test-only (d355aceaffc) - Bug 928734 - Intermittent test_419731.js | "title 2" == "new title 1". r=mano, a=test-only (831cd48ff3b) - Bug 968095 - Upload a new talos.zip file. r=armenzg, a=test-only (6aabc41b9e4) - Bug 946502 - Part 2: Remove unimplemented, unused function. r=mattwoodrow, a=lsblakk (08701f141be) - Bug 946502 - Part 3: Extend FrameLayerBuilder to set fixed-pos metadata on layers created for background-attachment:fixed content. r=mattwoodrow, a=lsblakk (1a48b12cc0b) - Bug 946502 - Part 4: Remove mStickyPosFrame. r=mattwoodrow, a=lsblakk (22144126131) - Bug 946502 - Part 5: A ViewportFrame with a displayport on the root element needs to be an animated geometry root. r=mattwoodrow, a=lsblakk (88f936a3e0d) - Bug 866222 - Just always define getInterface on the window for now, so we stop breaking people. It'll go away once we ship WebIDL window. r=peterv, a=sledru (7db780583f5) - Backed out 4 changesets (bug 946502) for bustage. a=backout (5bcc14d3ba2) - Bug 959230 - Use DOMWindowCreated events to add payments listeners. r=mfinkle, a=sledru (5c2dab4943d) - Bug 965560 - Fix icon in sidebar toolbarbutton. r=felipc, a=sledru (6041be4916b) - Bug 956075 - Add a custom view flipper to avoid Gingerbread bugs with touching ViewGroups. r=lucasr, a=sledru (fd2ba65ca29) - Bug 932350 et al - Disable dom-level* test suite for intermittent failures on multiple platforms. a=test-only (4fe54dfd85c) - Bug 957621 - Disable test_bug570378-* on b2g desktop for frequent failures which kill the run. a=test-only (ef95fb662a4) - Bug 850721 - Fix social blocklist oranges by not enabling the default update server. r=mixedpuppy, a=test-only (96ca7d416a1) - Bug 943275 - Correct test_conference.js. r=aknow, a=test-only (70d29237542) - Bug 951028 - Fix NTFS permissions when a file is moved to a different directory. r=yoric, r=bbondy, a=sledru (fc223143fc3) - Bug 965587 - Add lock to Firefox Health Report uploading. r=rnewman, a=lsblakk (c43707074d2) - Backed out changeset f98919f562c9 (bug 951028) for suspicion of causing Windows shutdown hangs. a=backout (5002d57f065) - No bug, Automated blocklist update from host bld-linux64-ec2-356 - a=blocklist-update (baee5310d74) - Bug 960999 - Fix for random test failure in browser_form_selects.js. r=mbrubeck, a=test-only (16d479321d1) - Bug 966311 - Calculate frame size for stereo wave. r=doublec, a=sledru (e6e55183d3f) - Bug 967342 - Server not found pages have '&f=regular' appended to url. r=bz a=sylvestre (0c17ad1c028) - Bug 951028 - Fix NTFS permissions when a file is moved to a different directory. r=yoric, r=bbondy, a=sledru (ff072a9b132) - Bug 934509 - Make sure to not accidentally pass 0 to ClearTimeoutOrInterval, even if someone calls clearInterval(0) on an Xray for a Window. r=peterv, a=sledru (73cfd4e415e) - Bug 964462 - Simplify IPC offline resource refcounting. r=mayhemer, a=sledru (9d9fe584d14) - Bug 963324 - Import mismatch menclose reftests from the MathJax testsuite. r=karlt, a=test-only (095601dfd6d) - Bug 968317 - Remove switch-to-metro menu item in non-Metro builds [r=dolske a=lsblakk] (32bf25e9522) - Bug 961177 - Fix "undefined" in download notification string [r=mbrubeck a=sylvestre] (b2cf43320f7) - Bug 967007 - Bump the sniffing limit for mp3. r=rillian, a=sledru (8e24119533f) - Bug 965914 - Don't crash when we can't allocate a new surface in CloneAligned. r=Bas, a=sledru (58dc9c6d427) - Bug 869368 - Fix Flash plugin positioning on Android 2.3. r=clord, a=lsblakk (169e9850897) - Bug 950241 - Add update restart flag to metro utils. r=bbondy, a=lsblakk (39ccd55accb) - Bug 950241 - Add new metrofx restart command line flag in MetroAppShell. r=bbondy, a=lsblakk (ef667fc903a) - Bug 950241 - Add process running helpers to CEHHelpers. r=bbondy, a=lsblakk (67ab72b3788) - Bug 950241 - Get rid of threaded delayed restart logic in the CEH. r=bbondy, a=lsblakk (a9cf3b46b4a) - Bug 950241 - Replace misc. restart boolean flags with an enum and cleanup CEH Execute. r=bbondy, a=lsblakk (8cc03e7c9f5) - Bug 950241 - Update nsUpdateDriver metro check to pick up new command line params. r=bbondy, a=lsblakk (274e3a8d64a) - Bug 950241 - Set front end flag for metrofx restart. r=bbondy, r=rs, a=lsblakk (4ddfba03bf6) - Bug 950241 - Delay desktop restart for updating until the metro browser has shutdown. r=bbondy, a=lsblakk (c7424331025) - Bug 950241 - Update app runners last run settings to support desktop updating from metro. r=bbondy, a=lsblakk (4845c36c7f4) - Bug 950241 - Delay launch from tiles and shortcuts when there's an update in progress. r=bbondy, a=lsblakk (4a565fbd0f8) - Bug 966626 - Fix for browser launch error dialog on Win8 caused by CommandExecuteHandler changes in bug 950241: release the IShellItemArray Explorer hands us prior to derefing the ceh. r=bbondy, a=lsblakk, ba=jimm (38d449911d6) - Bug 969782 - Uplift hotfix from bug 695143. r=gozala, a=lsblakk (ce5e8f03c11) - Bug 962313 - Disable <input type=number> for v28. r=smaug, a=lsblakk (e1fb1c8eb78) - Bug 969800 - Fix nsMemoryReporterManager::GetVsize for !HAVE_VSIZE_AND_RESIDENT_REPORTERS and add GNU/kFreeBSD support to nsMemoryReporterManager. r=njn, a=NPOTB (bed7e48a8ef) - Bug 969839 - Bump required NSPR version to 4.10.3. r=gps, a=NPOTB (55c6ed64570)